Update privacy policy with new tracking and retention details_facebook SDK

--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
 <body>
     <div class="container">
         <h1>Privacy Policy</h1>
-        <p class="updated">Last Updated: January 2026</p>
+        <p class="updated">Last Updated: February 2026</p>
 
         <p>
             Edgin (“we,” “our,” or “us”) values your privacy. This Privacy Policy explains how we collect,
@@ -93,6 +93,12 @@
             <li>
                 <strong>Crash and performance data</strong> (Firebase Crashlytics) for diagnosing errors and improving stability
             </li>
+            <li>
+                <strong>Device advertising identifier (IDFA)</strong> (Meta/Facebook SDK) – collected only with your explicit consent via Apple's App Tracking Transparency (ATT) prompt. Used solely for ad attribution and measuring the effectiveness of our advertising campaigns. If you do not grant permission, this identifier is not collected.
+            </li>
+            <li>
+                <strong>App events</strong> (Meta/Facebook SDK), such as app installs and app launches, used for ad campaign measurement and optimization
+            </li>
         </ul>
         <p>
             This data is collected in an aggregated and anonymized manner where possible.
@@ -107,6 +113,7 @@
             <li>Improve app performance, reliability, and user experience</li>
             <li>Detect, prevent, and fix technical issues</li>
             <li>Respond to user inquiries and support requests</li>
+            <li>Measure the effectiveness of our advertising campaigns</li>
         </ul>
 
         <h2>3. Data Sharing and Third-Party Services</h2>
@@ -122,25 +129,42 @@
             <li>Firebase Analytics</li>
             <li>Firebase Crashlytics</li>
             <li>AI service providers for processing analysis requests</li>
+            <li>Meta/Facebook SDK for ad attribution and campaign measurement</li>
         </ul>
         <p>
             These providers are required to protect your data in accordance with their own privacy policies
             and applicable laws.
         </p>
 
-        <h2>4. Data Retention</h2>
+        <h2>4. Advertising and Tracking</h2>
+        <p>
+            We use the Meta (Facebook) SDK to measure the effectiveness of our advertising campaigns.
+            On iOS, we request your permission through Apple's App Tracking Transparency (ATT) framework
+            before accessing your device's advertising identifier (IDFA).
+        </p>
+        <p>
+            You may choose to allow or deny tracking when prompted. If you deny tracking, we will not
+            access your IDFA, and ad measurement will rely on privacy-preserving methods such as Apple's
+            SKAdNetwork. Your choice does not affect your ability to use any features in the App.
+        </p>
+        <p>
+            You can change your tracking preference at any time in your device's Settings under
+            Privacy &amp; Security &gt; Tracking.
+        </p>
+
+        <h2>5. Data Retention</h2>
         <p>
             We retain personal data only for as long as necessary to fulfill the purposes outlined in this
             Privacy Policy, unless a longer retention period is required by law.
         </p>
 
-        <h2>5. Data Security</h2>
+        <h2>6. Data Security</h2>
         <p>
             We use reasonable, industry-standard security measures to protect your information.
             However, no method of transmission or storage is completely secure.
         </p>
 
-        <h2>6. Your Privacy Rights</h2>
+        <h2>7. Your Privacy Rights</h2>
         <p>
             Depending on your location, you may have rights to access, correct, or delete your personal data,
             or to withdraw consent where applicable.
@@ -149,19 +173,19 @@
             To exercise these rights, please contact us using the information below.
         </p>
 
-        <h2>7. Children’s Privacy</h2>
+        <h2>8. Children's Privacy</h2>
         <p>
             Edgin is not intended for children under the age of 13. We do not knowingly collect personal
             information from children.
         </p>
 
-        <h2>8. Changes to This Privacy Policy</h2>
+        <h2>9. Changes to This Privacy Policy</h2>
         <p>
             We may update this Privacy Policy from time to time. Any changes will be posted on this page
             with an updated effective date.
         </p>
 
-        <h2>9. Contact Us</h2>
+        <h2>10. Contact Us</h2>
         <p>
             If you have any questions about this Privacy Policy or our data practices, please contact us at:
         </p>
